test/invalid/baseline/frozenarray-empty.txt
Syntax error at line 1 in frozenarray-empty.widl:
typedef FrozenArray<> empty;
                    ^ Missing FrozenArray subtype
